--- a/client/src/customer/components/Nav/nav.css
+++ b/client/src/customer/components/Nav/nav.css
@@ -6,7 +6,7 @@
     height: 50px;
     width: 100vw;
     backdrop-filter: blur(3px);
-    z-index: 4;
+    z-index: 9;
 }
 
 .nav-bar {
@@ -20,7 +20,7 @@
     align-items: center;
     padding: 0 20px;
     background-color: var(--peach-blush);
-    z-index: 5;
+    z-index: 100;
 }
 
 .nav-bar a {
@@ -37,7 +37,7 @@
     padding: 0;
     flex-basis: 30%;
     height: 64px;
-    z-index: 6;
+    /* z-index: 6; */
 }
 
 .left-menu {
